fix: fix spacing issue between our mission and our story

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -510,7 +510,7 @@ intro .carousel-container {
    color: #2088DA;
    text-transform: uppercase;
    margin-bottom: 0;
-   margin-top: 30px;
+   margin-top: 60px;
  }
 
  .section-heading h2 {
